--- a/frontend/ConsumirAPIVUE/apipredios/package.json
+++ b/frontend/ConsumirAPIVUE/apipredios/package.json
@@ -5,14 +5,18 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "npm run build",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "express": "^4.17.2",
     "mapbox-gl": "^2.6.1",
+    "serve-static": "^1.14.2",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.0",
     "vue-mapbox": "^0.4.1",
